<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivitySetRemaind">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/givetoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:title="@string/add_reminder"
        app:titleTextColor="@android:color/white">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/des"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".10"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".95"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <AutoCompleteTextView
                        android:id="@+id/edtname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".200"
                        android:background="@drawable/bg_text"
                        android:drawableLeft="@drawable/ic_person_black_24dp"
                        android:drawablePadding="6dp"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName|textCapWords"
                        android:paddingLeft="12dp" />

                    <ImageView
                        android:id="@+id/imgcontact"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_group_add_black_24dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".60"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtamount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_text"
                        android:drawableLeft="@drawable/icons_expensive"
                        android:drawablePadding="6dp"
                        android:ems="10"
                        android:hint="@string/amount"
                        android:inputType="textPersonName|number"
                        android:paddingLeft="12dp" />

                    <EditText
                        android:id="@+id/edtdes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_text"
                        android:drawableLeft="@drawable/ic_description_black_24dp"
                        android:drawablePadding="6dp"
                        android:ems="10"
                        android:hint="@string/description"
                        android:inputType="textPersonName|textCapWords"
                        android:paddingLeft="12dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".70"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvcdate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:background="@drawable/bg_text"
                        android:drawableLeft="@drawable/ic_today_black_24dp"
                        android:drawablePadding="6dp"
                        android:gravity="center|left"
                        android:hint="@string/date"
                        android:paddingLeft="12dp"
                        android:textSize="17sp" />

                    <Button
                        android:id="@+id/btncdate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:text="@string/set_date_and_time"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/des"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvduedate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:background="@drawable/bg_text"
                        android:drawableLeft="@drawable/ic_today_black_24dp"
                        android:drawablePadding="6dp"
                        android:gravity="center|left"
                        android:hint="@string/due_date"
                        android:paddingLeft="12dp"
                        android:textSize="17sp" />

                    <Button
                        android:id="@+id/btnduedate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:text="@string/set_date_and_time"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="left|center">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp">

                    <RadioButton
                        android:id="@+id/radiogiven"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/give"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:id="@+id/radiotaken"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/take_with_space"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="32dp"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnsub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:background="@drawable/bg_button"
                        android:text="@string/save"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btnrmdgiven"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button"
                        android:text="@string/set_remainder"
                        android:layout_marginLeft="6dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:visibility="gone"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|bottom"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgrhome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>