<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".ActivityBackup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:layout_weight=".95"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_name"
                    android:textColor="@android:color/white"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_weight=".80"
            android:background="@drawable/bg_rect"
            android:elevation="1dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="32dp">

            <Button
                android:id="@+id/btnbackup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:textColor="@color/white"
                android:layout_marginBottom="12dp"
                android:textSize="17sp"
                android:text="@string/backup_database" />

            <Button
                android:id="@+id/btnrestore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginBottom="12dp"
                android:text="@string/restore_database" />

            <Button
                android:id="@+id/btnonlinebackup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginBottom="12dp"
                android:text="@string/google_backup" />

            <Button
                android:id="@+id/btnonlineimport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginBottom="12dp"
                android:text="@string/google_restore" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|bottom"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgbackuphome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:src="@drawable/home"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>