<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityTakeMoney">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/givetoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:title="@string/taken"
        app:titleTextColor="@android:color/white">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".30"
                android:gravity="center|left"
                android:paddingLeft="24dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/take_status"
                android:textColor="@color/blue"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgtakelist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="6dp"
                android:src="@drawable/ic_add_circle_black_24dp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/des"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".10"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".95"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <AutoCompleteTextView
                        android:id="@+id/ettakename"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".200"
                        android:background="@drawable/bg_text"
                        android:drawableLeft="@drawable/ic_person_black_24dp"
                        android:drawablePadding="6dp"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName|textCapWords"
                        android:paddingLeft="12dp" />

                    <ImageView
                        android:id="@+id/imgtakecontact"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_group_add_black_24dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/ettakeamount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_text"
                        android:drawableLeft="@drawable/icons_expensive"
                        android:drawablePadding="6dp"
                        android:ems="10"
                        android:hint="@string/amount"
                        android:inputType="textPersonName|number"
                        android:paddingLeft="12dp" />

                    <EditText
                        android:id="@+id/ettakedes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_text"
                        android:drawableLeft="@drawable/ic_description_black_24dp"
                        android:drawablePadding="6dp"
                        android:ems="10"
                        android:hint="@string/description"
                        android:inputType="textPersonName|textCapWords"
                        android:paddingLeft="12dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".80"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvcdatetake"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:background="@drawable/bg_text"
                        android:drawableLeft="@drawable/ic_today_black_24dp"
                        android:drawablePadding="6dp"
                        android:gravity="center|left"
                        android:hint="@string/date"
                        android:paddingLeft="12dp"
                        android:textSize="17sp" />

                    <Button
                        android:id="@+id/btnsetdatetake"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:text="@string/set_date_and_time"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/des"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvduedatetake"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:background="@drawable/bg_text"
                        android:drawableLeft="@drawable/ic_today_black_24dp"
                        android:drawablePadding="6dp"
                        android:gravity="center|left"
                        android:hint="@string/due_date"
                        android:paddingLeft="12dp"
                        android:textSize="17sp" />

                    <Button
                        android:id="@+id/btnsetduedatetake"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:text="@string/set_date_and_time"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="32dp"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnsub1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button"
                        android:text="@string/submit"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|bottom"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgtakenhome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>