<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".ActivityFormForRemaind">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:layout_weight=".95"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_name"
                    android:textColor="@android:color/white"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_weight=".85"
            android:background="@drawable/bg_rect"
            android:elevation="1dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="32dp">

            <Button
                android:id="@+id/btnrmdgiven"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginBottom="12dp"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/add_reminder"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <Button
                android:id="@+id/btnrmdtaken"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginBottom="12dp"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/view_reminders"
                android:textColor="@color/white"
                android:textSize="21sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|bottom"
            android:layout_marginTop="42dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgremainderhome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/home"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>